--- a/res/layout/camera_connection_fragment_stylize.xml
+++ b/res/layout/camera_connection_fragment_stylize.xml
@@ -14,7 +14,7 @@
  limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:orientation="vertical"
+      android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
   <org.tensorflow.demo.AutoFitTextureView
