--- a/res/values/base-strings.xml
+++ b/res/values/base-strings.xml
@@ -16,8 +16,8 @@
 -->
 
 <resources>
-    <string name="app_name">TensorFlow Demo</string>
-    <string name="activity_name_classification">TF Classify</string>
+    <string name="app_name">Roady</string>
+    <string name="activity_name_classification">Semantic Road Segmentation</string>
     <string name="activity_name_detection">TF Detect</string>
     <string name="activity_name_stylize">TF Stylize</string>
 </resources>
